2/13/26
- add .gitignore
- fix player position does now resets on endgame
2/18/26
- Improve readability more
- Update meteors to always reset off screen
2/19/26
- change magic number to meteor.DEFAULT_SPEED_DOWN constant
- implement highscores_human.csv and scores_human.csv to track human stats
- change meteor.py to entities.py for clarity
2/19/26 (commit 2)
- change folder names/hierarchy to better reflect files
- change assets/scores.csv to highscores/highscores_human.csv
2/25/26
- refactor code around OOP
- create player class