@@ -1,6 +1,23 @@
 This file is to track what I learned during this project so I can include it in my presentation.
 
-- Github - branches, version control, naming convention, commit messages
-- Code readability skills - refactoring, docstrings, constants.py, file hierarchy
+Python Packages:
 - pygame
-- music production
+
+Github:
+- Branches
+- version control
+- naming convention
+- descriptive commit messages
+
+Code Readability:
+- refactoring
+- docstrings
+- descriptive variable naming
+- folder hierarchy and naming
+- object oriented programming
+
+Music Production:
+- FL Studio
+- Nexus
+- SoundToys
+
